Fix checkbox ink drop ripple for RTL.

BUG=655574

Review-Url: https://chromiumcodereview.appspot.com/2438053002
Cr-Commit-Position: refs/heads/master@{#426593}

Former-commit-id: f7723387a069c61c42d80c433b55e4e24e3e9512